--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,10 @@
     --cor-primaria: #000000;
     --cor-secundaria: #F6F6F6;
     --cor-terciaria: #22D4FD;
+    --cor-hover: #272727;
+
+    --fonte-primaria: 'Krona One', sans-serif;
+    --font-secundaria: 'Montserrat', sans-serif;
 }
 * {
 margin: 0;
@@ -29,7 +33,7 @@ body{
 }
 
 .cabecalho__menu__link {
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--font-secundaria);
     font-size: 24px;
     font-weight: 600;
     color: var(--cor-terciaria);
@@ -90,12 +94,12 @@ span:hover{
 
 .apresentacao__conteudo__titulo{
     font-size: 36px;
-    font-family: 'Krona One', sans-serif;
+    font-family: var(--fonte-primaria);
 }
 
 .apresentacao__conteudo__texto{
     font-size: 20px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--font-secundaria);
 }
 
 .apresentacao__links{
@@ -107,7 +111,7 @@ span:hover{
 }
 
 .apresentacao__links__link {
-    /* background-color: var(--cor-terciaria);*/ 
+    background-color: var(--cor-hover); 
     display: flex;
     justify-content: center;
     gap: 16px;  border: 3px solid vvar(--cor-terciaria);  width: 378px;
@@ -118,7 +122,7 @@ span:hover{
     padding: 21.5px 0;
     text-decoration: none;
     color: var(--cor-secundaria);
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--font-secundaria);
 }
 
 .apresentacao__links__link:hover {
@@ -126,7 +130,7 @@ span:hover{
 }
 
 .apresentacao__links__subtitulo{
-    font-family:'Krona One', sans-serif;
+    font-family:var(--fonte-primaria);
     font-weight: 400;
     font-size: 24px;
 }
@@ -136,7 +140,7 @@ span:hover{
     color: var(--cor-primaria);
     background-color: var(--cor-terciaria);
     text-align: center;
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--font-secundaria);
     font-size: 24px;
     font-weight: 400;
 }
