--- a/styles/styleAlura.css
+++ b/styles/styleAlura.css
@@ -7,100 +7,56 @@
     --cor-hover: #272727;
 
     --fonte-primaria: 'Krona One', sans-serif;
-    --font-secundaria: 'Montserrat', sans-serif;
+    --fonte-secundaria: 'Montserrat', sans-serif;
 }
-* {
-margin: 0;
-padding: 0;
+*{
+    margin: 0;
+    padding: 0;
 }
 
 body{
-    /*height: 100vh;*/
     box-sizing: border-box;
     background-color: var(--cor-primaria);
     color: var(--cor-secundaria);
-    font-size: 1rem;
-    line-height: 1.5;
 }
-
-.cabecalho {
+.cabecalho{
     padding: 2% 0% 0% 15%;
 }
-
-.cabecalho__menu {
+.cabecalho__menu{
     display: flex;
     gap: 80px;
 }
-
-.cabecalho__menu__link {
-    font-family: var(--font-secundaria);
+.cabecalho__menu__link{
+    font-family: var(--fonte-secundaria);
     font-size: 1.5rem;
     font-weight: 600;
     color: var(--cor-terciaria);
     text-decoration: none;
 }
-
-h1{
-    font-weight: bold;
-}
-
-
-strong{
-    color: var(--cor-terciaria);
-}
-
-span{
-    color: var(--cor-terciaria);
-    border: 1px solid var(--cor-terciaria);
-    padding: 0.3rem;
-}
-
-span:hover{
-    background-color: var(--cor-terciaria);
-    color: var(--cor-primaria);
-    border: 1px solid var(--cor-primaria);
-    padding: 0.4rem;
-    text-transform: uppercase;
-}
-
-/*p {
-    color: var(--cor-terciaria);
-    margin: 10px;
-    border: 1px solid white;
-    padding: 10px;
-   }*/
-
-.destaque {
-    color: var(--cor-terciaria); /* Altere a cor conforme desejar */
-    /* font-size: 1.2 evar(--cor-terciaria) Aumenta um pouco o tamanho */
-    /* font-weight: bold;*/ /* Mantém a negrito */
-    /* text-transform: uppercase; /* Transforma em maiúsculas */
-}
-
-.apresentacao {
+.apresentacao{
     padding: 5% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 82px;
 }
-
 .apresentacao__conteudo {
     width: 50%;
     display: flex;
     flex-direction: column;
-    gap: 40px;
-   
+    gap: 40px; 
 }
 
 .apresentacao__conteudo__titulo{
     font-size: 2.25rem;
     font-family: var(--fonte-primaria);
 }
-
+.titulo-destaque{
+    color: var(--cor-terciaria);
+}
 .apresentacao__conteudo__texto{
-    font-size: 1.25rem;
-    font-family: var(--font-secundaria);
+    font-size: 1.5rem;
+    font-family: var(--fonte-secundaria);
 }
 
 .apresentacao__links{
@@ -108,9 +64,13 @@ span:hover{
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    gap: 2rem;
+    gap: 32px;
 }
-
+.apresentacao__links__subtitulo{
+    font-family: var(--fonte-primaria);
+    font-weight: 400;
+    font-size: 1.5rem;
+}
 .apresentacao__links__navegacao {
     display: flex;
     justify-content: center;
@@ -126,29 +86,19 @@ span:hover{
     color: var(--cor-secundaria);
     font-family: var(--font-secundaria);
 }
-.apresentacao__links__link:hover {
-    background-color: green; /* #272727*/
+
+.apresentacao__links__link:hover{
+    background-color: var(--cor-hover);
 }
 
-.apresentacao__links__subtitulo{
-    font-family:var(--fonte-primaria);
-    font-weight: 400;
-    font-size: 1.5rem;
-}
-
-.rodape {
-    padding: 1.5rem;
+.rodape{
     color: var(--cor-primaria);
     background-color: var(--cor-terciaria);
+    padding: 24px;
     text-align: center;
-    font-family: var(--font-secundaria);
+    font-family: var(--fonte-secundaria);
     font-size: 1.5rem;
     font-weight: 400;
-}
-
-.apresentacao__conteudo__texto a{
-    text-decoration: none;
-    color: var(--cor-terciaria);
 }
 
 .apresentacao__imagem {
@@ -159,7 +109,7 @@ span:hover{
     .cabecalho {
         padding: 10%;
     }
-
+    
     .cabecalho__menu{
         justify-content: center;
     }
@@ -168,7 +118,7 @@ span:hover{
         flex-direction: column-reverse;
         padding: 5%;
     }
-
+    
     .apresentacao__conteudo {
         width: auto;
     }
